k8s/gateways/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swa-ingress
  annotations:
spec:
  rules:
    - host: backend.minikube.local
      http:
        paths:
          - path: "/auth"
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: "/products"
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: "/accounts"
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 80
          - path: "/orders"
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
